Set correct CORS

--- a/PublicApi/appsettings.Development.json
+++ b/PublicApi/appsettings.Development.json
@@ -11,5 +11,5 @@
     "Authority": "https://ameling-dev.eu.auth0.com/",
     "Audience": "https://api.ameling.dev"
   },
-  "CorsClient": "https://ameling.dev",
+  "CorsClient": "http://localhost:8080"
 }
