--- a/PublicApi/appsettings.json
+++ b/PublicApi/appsettings.json
@@ -11,7 +11,7 @@
     "Authority": "https://ameling-dev.eu.auth0.com/",
     "Audience": "https://api.ameling.dev"
   },
-  "CorsClient": "http://localhost:8080",
+  "CorsClient": "https://ameling.dev",
   "BlogPost": {
     "Host": "https://ameling.dev",
     "DataPath": "/res/data/blog_posts.json",
