--- a/PublicApi/appsettings.json
+++ b/PublicApi/appsettings.json
@@ -1,10 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/logs.txt",
+          "fileSizeLimitBytes": 10485760,
+          "retainedFileCountLimit": 1
+        }
+      }
+    ]
   },
   "SqliteDatabase": "PublicApi.db3",
   "Jwt": {
